--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">GameListCompose</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_favorite">Favorite</string>
 </resources>
